Implemented dark theme for the window nonclient area.

--- a/WorldEditor/StartWindow.xaml
+++ b/WorldEditor/StartWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WorldEditor.StartWindow"
+﻿<local:Window x:Class="WorldEditor.StartWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorldEditor"
         mc:Ignorable="d"
-        Title="StartWindow" Height="450" Width="800" ResizeMode="NoResize" Background="{StaticResource BackgroundBrush}" TextBlock.Foreground="{StaticResource ForegroundPrimaryBrush}">
+        Title="StartWindow" Height="450" Width="800" Background="{StaticResource BackgroundBrush}" TextBlock.Foreground="{StaticResource ForegroundPrimaryBrush}" Style="{StaticResource {x:Type local:Window}}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -48,4 +48,4 @@
             </StackPanel>
         </Grid>
     </Grid>
-</Window>
+</local:Window>
