--- a/WorldEditor/App.xaml
+++ b/WorldEditor/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="WorldEditor.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:shell="clr-namespace:System.Windows.Shell;assembly=PresentationFramework"
              xmlns:local="clr-namespace:WorldEditor"
              StartupUri="StartWindow.xaml"
              ShutdownMode="OnLastWindowClose">
@@ -134,11 +135,158 @@
                 </DrawingGroup>
             </DrawingImage.Drawing>
         </DrawingImage>
+        <DrawingImage x:Key="CloseGlyph">
+            <DrawingImage.Drawing>
+                <DrawingGroup>
+                    <GeometryDrawing Geometry="M 18,11 27,20 M 18,20 27,11">
+                        <GeometryDrawing.Pen>
+                            <Pen Thickness="1" Brush="#FFF1F1F1" />
+                        </GeometryDrawing.Pen>
+                    </GeometryDrawing>
+                </DrawingGroup>
+            </DrawingImage.Drawing>
+        </DrawingImage>
+        <DrawingImage x:Key="RestoreGlyph">
+            <DrawingImage.Drawing>
+                <DrawingGroup>
+                    <GeometryDrawing Geometry="M 18.5,12.5 H 25.5 V 19.5 H 18.5 Z M 20.5,12.5 V 10.5 H 27.5 V 17.5 H 25.5">
+                        <GeometryDrawing.Pen>
+                            <Pen Thickness="1" Brush="#FFF1F1F1" />
+                        </GeometryDrawing.Pen>
+                    </GeometryDrawing>
+                </DrawingGroup>
+            </DrawingImage.Drawing>
+        </DrawingImage>
+        <DrawingImage x:Key="MaximizeGlyph">
+            <DrawingImage.Drawing>
+                <DrawingGroup>
+                    <GeometryDrawing Geometry="M 18.5,10.5 H 27.5 V 19.5 H 18.5 Z">
+                        <GeometryDrawing.Pen>
+                            <Pen Thickness="1" Brush="#FFF1F1F1" />
+                        </GeometryDrawing.Pen>
+                    </GeometryDrawing>
+                </DrawingGroup>
+            </DrawingImage.Drawing>
+        </DrawingImage>
+        <DrawingImage x:Key="MinimizeGlyph">
+            <DrawingImage.Drawing>
+                <DrawingGroup>
+                    <GeometryDrawing Geometry="M 18,15 H 28">
+                        <GeometryDrawing.Pen>
+                            <Pen Thickness="1" Brush="#FFF1F1F1" />
+                        </GeometryDrawing.Pen>
+                    </GeometryDrawing>
+                </DrawingGroup>
+            </DrawingImage.Drawing>
+        </DrawingImage>
 
         <!-- Styles -->
-        <Style x:Key="{x:Type Window}" TargetType="{x:Type Window}">
+        <Style x:Key="CaptionButton" TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="{StaticResource HoverBrush}" />
+            <Setter Property="BorderBrush" Value="{x:Null}" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Width" Value="46" />
+            <Setter Property="shell:WindowChrome.IsHitTestVisibleInChrome" Value="True" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="Border" Background="Transparent" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter Margin="{TemplateBinding Padding}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="Border" Property="Background" Value="{Binding Background, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" />
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="Border" Property="Opacity" Value="0.65" />
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter TargetName="Border" Property="Opacity" Value="0.4" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="{x:Type local:Window}" TargetType="{x:Type local:Window}">
             <Setter Property="Background" Value="{StaticResource BackgroundWellBrush}" />
             <Setter Property="Foreground" Value="{StaticResource ForegroundPrimaryBrush}" />
+            
+
+            <Setter Property="shell:WindowChrome.WindowChrome">
+                <Setter.Value>
+                    <shell:WindowChrome GlassFrameThickness="1" CaptionHeight="27" UseAeroCaptionButtons="False" />
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type local:Window}">
+                        <Border x:Name="MaximizeMargin" Padding="0">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="1*" />
+                                </Grid.RowDefinitions>
+                                <Border Grid.Row="0" Height="{Binding Top, Source={x:Static SystemParameters.WindowResizeBorderThickness}}" />
+                                <Border Grid.Row="1" Height="{x:Static SystemParameters.WindowCaptionHeight}" />
+                                <Border Grid.Row="2" Height="{Binding Left, Source={x:Static SystemParameters.WindowNonClientFrameThickness}}" />
+                                <Border Grid.RowSpan="3" x:Name="Titlebar" Background="{StaticResource BackgroundHeadingBrush}" BorderThickness="1 1 1 0">
+                                    <DockPanel>
+                                        <Image DockPanel.Dock="Left" Source="{TemplateBinding Icon}" Width="16" Height="16" Stretch="Uniform" Margin="8 0 0 0" />
+
+                                        <Button x:Name="PART_CloseButton" DockPanel.Dock="Right" Style="{StaticResource CaptionButton}" Background="#E81123">
+                                            <Image Source="{StaticResource CloseGlyph}" />
+                                        </Button>
+                                        <Button x:Name="PART_MaximizeButton" DockPanel.Dock="Right" Style="{StaticResource CaptionButton}">
+                                            <Image Source="{StaticResource MaximizeGlyph}" />
+                                        </Button>
+                                        <Button x:Name="PART_RestoreButton" DockPanel.Dock="Right" Style="{StaticResource CaptionButton}">
+                                            <Image Source="{StaticResource RestoreGlyph}" />
+                                        </Button>
+                                        <Button x:Name="PART_MinimizeButton" DockPanel.Dock="Right" Style="{StaticResource CaptionButton}" RenderOptions.EdgeMode="Aliased">
+                                            <Image Source="{StaticResource MinimizeGlyph}" />
+                                        </Button>
+
+                                        <TextBlock x:Name="Title" Text="{TemplateBinding Title}" VerticalAlignment="Center" Margin="8 0" />
+                                    </DockPanel>
+                                </Border>
+                                <Border Grid.RowSpan="4" x:Name="Border" BorderThickness="1" />
+                                <Border Grid.Row="3" Background="{TemplateBinding Background}" BorderThickness="1 0 1 1">
+                                    <ContentPresenter Grid.Row="3" Content="{TemplateBinding Content}" />
+                                </Border>
+                            </Grid>
+                        </Border>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsActive" Value="False">
+                                <Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource BackgroundHeadingBrush}" />
+                                <Setter TargetName="Titlebar" Property="Background" Value="{StaticResource BackgroundWellBrush}" />
+                                <Setter TargetName="Title" Property="Foreground" Value="{StaticResource ForegroundSecondaryBrush}" />
+                                <Setter TargetName="Title" Property="Opacity" Value="0.6" />
+                            </Trigger>
+                            <Trigger Property="WindowState" Value="Maximized">
+                                <Setter TargetName="PART_MaximizeButton" Property="Visibility" Value="Collapsed" />
+                                <Setter TargetName="MaximizeMargin" Property="Padding" Value="7" />
+                            </Trigger>
+                            <Trigger Property="WindowState" Value="Normal">
+                                <Setter TargetName="PART_RestoreButton" Property="Visibility" Value="Collapsed" />
+                            </Trigger>
+                            <Trigger Property="ResizeMode" Value="NoResize">
+                                <Setter TargetName="PART_MaximizeButton" Property="Visibility" Value="Hidden" />
+                                <Setter TargetName="PART_MinimizeButton" Property="Visibility" Value="Hidden" />
+                                <Setter TargetName="PART_RestoreButton" Property="Visibility" Value="Hidden" />
+                            </Trigger>
+                            <Trigger Property="ResizeMode" Value="CanMinimize">
+                                <Setter TargetName="PART_MaximizeButton" Property="IsEnabled" Value="False" />
+                                <Setter TargetName="PART_RestoreButton" Property="IsEnabled" Value="False" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
         </Style>
         <Style TargetType="{x:Type Image}">
             <Setter Property="Stretch" Value="None" />
