--- a/WorldEditor/CreateWorldWindow.xaml
+++ b/WorldEditor/CreateWorldWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WorldEditor.CreateWorldWindow"
+﻿<local:Window x:Class="WorldEditor.CreateWorldWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorldEditor"
         mc:Ignorable="d"
-        Title="Create World" Height="450" Width="800" DataContext="{Binding RelativeSource={RelativeSource Self}}">
+        Title="Create World" Height="450" Width="800" DataContext="{Binding RelativeSource={RelativeSource Self}}" Style="{StaticResource {x:Type local:Window}}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -49,4 +49,4 @@
 
         <Button Grid.Row="3" Content="OK" HorizontalAlignment="Right" Margin="5" Padding="15 1" Click="OKButton_Click" />
     </Grid>
-</Window>
+</local:Window>
