--- a/WorldEditor/MainWindow.xaml
+++ b/WorldEditor/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WorldEditor.MainWindow"
+﻿<local:Window x:Class="WorldEditor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WorldEditor"
         xmlns:models="clr-namespace:WorldEditor.Models"
         mc:Ignorable="d"
-        Title="Polar Vortex World Editor" Height="450" Width="800" Style="{StaticResource ResourceKey={x:Type Window}}" DataContext="{Binding RelativeSource={RelativeSource Self}}">
+        Title="Polar Vortex World Editor" Height="450" Width="800" Icon="{StaticResource ToolBrush32px}" DataContext="{Binding RelativeSource={RelativeSource Self}}" Style="{StaticResource {x:Type local:Window}}">
     <Window.Resources>
         <Style x:Key="ToolButtonStyle" TargetType="{x:Type RadioButton}">
             <Setter Property="Background" Value="Transparent" />
@@ -334,4 +334,4 @@
             </TabControl>
         </Grid>
     </Grid>
-</Window>
+</local:Window>
