--- a/WorldEditor/App.xaml
+++ b/WorldEditor/App.xaml
@@ -622,14 +622,9 @@
                                         <Border.Style>
                                             <Style TargetType="{x:Type Border}">
                                                 <Setter Property="Background" Value="Transparent" />
-                                                <Style.Triggers>
-                                                    <Trigger Property="IsMouseOver" Value="True">
-                                                        <Setter Property="Background" Value="{StaticResource HoverBrush}" />
-                                                    </Trigger>
-                                                </Style.Triggers>
                                             </Style>
                                         </Border.Style>
-                                        <ContentPresenter Margin="10000000 0 0 0" x:Name="PART_Header" ContentSource="Header" TextBlock.Foreground="{StaticResource ForegroundPrimaryBrush}" />
+                                        <ContentPresenter Margin="10000000 2 0 2" x:Name="PART_Header" ContentSource="Header" TextBlock.Foreground="{StaticResource ForegroundPrimaryBrush}" />
                                     </Border>
 
                                     <ToggleButton x:Name="Expander" ClickMode="Press" IsChecked="{Binding IsExpanded, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}">
@@ -669,6 +664,12 @@
                                 </Grid>
                                 <ControlTemplate.Triggers>
                                     <Trigger Property="IsSelected" Value="True">
+                                        <Setter TargetName="Background" Property="Background" Value="{StaticResource HoverBrush}" />
+                                    </Trigger>
+                                    <Trigger SourceName="Background" Property="IsMouseOver" Value="True">
+                                        <Setter TargetName="Background" Property="Background" Value="{StaticResource HoverBrush}" />
+                                    </Trigger>
+                                    <Trigger SourceName="Expander" Property="IsMouseOver" Value="True">
                                         <Setter TargetName="Background" Property="Background" Value="{StaticResource HoverBrush}" />
                                     </Trigger>
                                     <MultiTrigger>
